full-demo/web.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web
  #namespace: demo
spec:
  serviceName: web-service
  replicas: 1
  selector:
    matchLabels:
      app: web # has to match .spec.template.metadata.labels
  template:
    metadata:
      labels:
        app: web # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: web
        image: paulgilchrist/mongodb-web:latest
        livenessProbe: # Defines the health checking
          tcpSocket: # TCP probe
            port: 80
          initialDelaySeconds: 30 # length of time to wait for a pod to initialize after pod startup, before applying health checking
          timeoutSeconds: 1
        ports:
        - containerPort: 80
          name: web
