full-demo/contacts-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: contacts-api-service
spec:
  ports:
    - port: 80
      name: http
    - port: 443
      name: https
  selector:
    app: contacts-api
  type: ClusterIP
