full-demo/products-api-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: products-api-service
spec:
  ports:
    - port: 80
      name: http
    - port: 443
      name: https
  selector:
    app: products-api
  type: ClusterIP
