full-demo/queue-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: queue-service
  #namespace: demo
spec:
  ports:
    - port: 15672
      name: http
    - port: 5672
      name: amqp
  selector:
    app: queue
  type: LoadBalancer # so a listner can be outside the cluster without needing an ingress
