full-demo/registry-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: registry-service
  #namespace: demo
spec:
  ports:
    - port: 80
      name: http
    - port: 443
      name: https
  selector:
    app: registry
  type: ClusterIP
