full-demo/contacts-api-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contacts-api-ingress
  # namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/cors-allow-methods: "DELETE, GET, OPTIONS, PATCH, POST, PUT"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/limit-rps: "100"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: contacts.company.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: contacts-api-service
              port:
                number: 80
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
      - contacts.company.com
      secretName: company-cert
