full-demo/products-api-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: products-api-ingress
  # namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/cors-allow-methods: "DELETE, GET, OPTIONS, PATCH, POST, PUT"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/limit-rps: "1" #Deliberatly limited so can demo HTTP 503 response
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: api.company.com
      http:
        paths:
        - path: /products/(.*)
          pathType: Prefix
          backend:
            service:
              name: products-api-service
              port:
                number: 80
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
      - api.company.com
      secretName: company-cert
