full-demo/queue-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: queue-ingress
  #namespace: demo
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-methods: "DELETE, GET, OPTIONS, PATCH, POST, PUT"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/limit-rps: "100"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
      - queue.company.com
    secretName: company-cert
  rules:
  - host: queue.company.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: queue-service
            port:
              number: 15672
